Nuevas funcionalidades y Integracion de api .net

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<main class="main">
+<!-- filepath: src/app/app.component.html -->
+<div class="container">
   <h1>{{ title }}</h1>
-  <app-todo-list></app-todo-list>
-</main>
-<router-outlet />
+  <router-outlet></router-outlet>
+</div>
