--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,24 +1,47 @@
-<div class="todo-container">
-    <h2>Lista de Tareas</h2>
-    
-    <div class="add-task">
-      <input 
-        type="text" 
-        [(ngModel)]="newTask" 
-        placeholder="Nueva tarea"
-        (keyup.enter)="addTask()">
-      <button (click)="addTask()">Agregar</button>
+<mat-card>
+  <mat-card-title>Lista de Tareas</mat-card-title>
+  <mat-card-content>
+    <div *ngIf="loading" class="loading-spinner">
+      <mat-spinner diameter="40"></mat-spinner>
     </div>
     
-    <ul class="task-list">
-      @for (task of tasks; track $index; let i = $index) {
-        <li>
-          <span>{{ task }}</span>
-          <button (click)="removeTask(i)">Eliminar</button>
-        </li>
-      }
-      @empty {
-        <li class="empty-list">No hay tareas pendientes</li>
-      }
-    </ul>
-  </div>
+    <mat-list *ngIf="!loading && todos.length > 0">
+      <mat-list-item *ngFor="let todo of todos">
+        <mat-checkbox 
+          [checked]="todo.completed"
+          (change)="toggleTodoComplete(todo)"
+          color="primary">
+          <span [class.completed]="todo.completed">{{ todo.title }}</span>
+        </mat-checkbox>
+        <button mat-icon-button color="warn" (click)="deleteTodo(todo)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </mat-list-item>
+    </mat-list>
+    
+    <div *ngIf="!loading && todos.length === 0" class="empty-state">
+      <p>No hay tareas pendientes. ¡Agrega una nueva!</p>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <form (ngSubmit)="addTodo()" class="todo-form">
+      <mat-form-field class="full-width">
+        <mat-label>Nueva Tarea</mat-label>
+        <input matInput [formControl]="newTodoControl" placeholder="Escribe una nueva tarea">
+        <mat-error *ngIf="newTodoControl.hasError('required')">
+          La tarea es requerida.
+        </mat-error>
+      </mat-form-field>
+      <button mat-raised-button color="primary" (click)="addTodo()" [disabled]="newTodoControl.invalid">
+        Agregar Tarea
+      </button>
+    </form>
+    
+    <div class="actions">
+      <button mat-icon-button (click)="loadTodos()" aria-label="Refrescar lista">
+        <mat-icon>refresh</mat-icon>
+      </button>
+    </div>
+  </mat-card-content>
+</mat-card>
